--- a/ConsumeSpotifyWebAPI/appsettings.json
+++ b/ConsumeSpotifyWebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Spotify": {
-    "ClientId": "482025c402c24a3db488c2c01afeb3a6",
-    "ClientSecret": "e7ab0d9137f24362a53e419723c3a43e"
+    "ClientId": "",
+    "ClientSecret": ""
   },
   "Logging": {
     "LogLevel": {
